# textcase-pro

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/account/: dependencies.py  models.py  services.py
app/converter/: models.py  routers.py  schemas.py  services.py
app/db/: config.py
